--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ section.home {
 .contact-form .input100 {
   width: 100%;
   margin: 0 10px;
+  margin-top: 20px;
 }
 
 .contact-form .row input,
