--- a/style.css
+++ b/style.css
@@ -148,11 +148,11 @@ section.home {
   display: inline-block;
   transform: scale(0.8);
 }
-.navigation .email-icon {
+/* .navigation .email-icon {
   position: absolute;
   bottom: 20px;
   transform: scale(0.8);
-}
+} */
 /* Homepage */
 .home-content {
   position: relative;
@@ -207,7 +207,7 @@ section.home {
 /* Work Page */
 .title h1 {
   margin-top: -50px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
 }
 .portfolio {
