--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ section.home {
   position: relative;
   z-index: 10;
   max-width: 600px;
+  padding: 15px 5px;
   /* background-image: brown; */
 }
 .home-img {
@@ -167,12 +168,18 @@ section.home {
   height: 110%;
 }
 
+.home-content p{
+  font-size: 1.2rem;
+}
+
 /* Services page */
+
+
 .services {
   margin-top: 20px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 5px;
   text-align: center;
   bottom: 100px;
   background-color: rgb(194, 161, 118);
@@ -188,18 +195,18 @@ section.home {
   border-radius: 5px;
 }
 
-.services .service:hover {
+/* .services .service:hover {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
-}
+} */
 .services .service .icon img {
-  max-width: 300px;
-  max-height: 200px;
+  max-width: 100px;
+  max-height: 60px;
   margin-top: 30px;
 }
 
 .services .service h2 {
-  font-size: 24px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 300;
   margin-top: 20px;
   color: brown;
 }
